--- a/style.css
+++ b/style.css
@@ -4,25 +4,25 @@ body {
 	color: #333;
 	font-family: Lato, sans-serif;
 }
-.aaa {
+.promo {
 	width: 500px;
 	margin: 0 auto;
 	display: block;
 	text-align: right;
 }
-.aaa img {
+.promo img {
 	width: 100%;
 }
-.aaa .more_inf {
+.promo .more-info {
 	font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-	.aaa { 
+	.promo { 
 		text-align: center;
 	}
 }
-.centered-main-page-element {
+.main {
 	display: block;
 	width: 500px;
 	margin: 0 auto 0;
@@ -32,7 +32,7 @@ body {
 	display: inline-block;
 	flex-grow: 1
 }
-.task-row-wrapper {
+.task-wrapper {
 	display: flex;
 }
 ul {
@@ -116,7 +116,7 @@ li > label {
 	font-size: 18px;
 	width: 226px;
 }
-li >    input[type="text"] {
+li > input[type="text"] {
 	width: 226px
 }
 button.delete img {
@@ -139,11 +139,11 @@ ul li input[type="text"] {
 	display:none
 }
 
-ul li.editMode input[type="text"] {
+ul li.edit-mode input[type="text"] {
 	display:inline-block;
 	width:224px
 }
 
-ul li.editMode label {
+ul li.edit-mode label {
 	display:none;
 }
