--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.body {
 	background-color: #f8f8f8;
 	color: #333;
 	font-family: Lato, sans-serif;
@@ -10,7 +10,7 @@ body {
 	display: block;
 	text-align: right;
 }
-.promo img {
+.promo #promo-img {
 	width: 100%;
 }
 .promo .more-info {
@@ -35,17 +35,22 @@ body {
 .task-wrapper {
 	display: flex;
 }
-ul {
+#incomplete-tasks,
+#completed-tasks {
 	margin:0;
 	padding: 0px;
 }
-li, h3 {
+li, 
+h3 {
 	list-style:none;
 }
-input,button{
+input, 
+button {
 	outline:none;
 }
-button {
+.add,
+.edit,
+.delete {
 	background: none;
 	border: 0px;
 	color: #888;
@@ -54,12 +59,15 @@ button {
 	font-family: Lato, sans-serif;
 	cursor: pointer;
 }
-button:hover {
+.add:hover,
+.edit:hover,
+.delete:hover {
 	color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.incomplete-header,
+.complete-header,
+#new-task-label[for="new-task"] {
 	color: #333;
 	font-weight: 700;
 	font-size: 15px;
@@ -68,7 +76,7 @@ label[for="new-task"] {
 	margin: 0;
 	text-transform: uppercase;
 }
-input[type="text"] {
+.task[type="text"] {
 	margin: 0;
 	font-size: 18px;
 	line-height: 18px;
@@ -80,16 +88,16 @@ input[type="text"] {
 	font-family: Lato, sans-serif;
 	color: #888;
 }
-input[type="text"]:focus {
+.task[type="text"]:focus {
 	color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+#new-task-label[for="new-task"] {
 	display: block;
 	margin: 0 0 20px;
 }
-input#new-task {
+#new-task {
 	width: 318px;
 }
 
@@ -98,7 +106,6 @@ li {
 	overflow: hidden;
 	padding: 20px 0;
 	border-bottom: 1px solid #eee;
-
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -119,31 +126,34 @@ li > label {
 li > input[type="text"] {
 	width: 226px
 }
-button.delete img {
+.delete img {
 	height: 2em;
 	transform: rotateZ(45deg);
 	transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.delete img:hover {
 	transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .task {
 	text-decoration: line-through
 	color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+#incomplete-tasks li input[type="text"],
+#completed-tasks li input[type="text"] {
 	display:none
 }
 
-ul li.edit-mode input[type="text"] {
+#incomplete-tasks .edit-mode input[type="text"],
+#completed-tasks .edit-mode input[type="text"] {
 	display:inline-block;
 	width:224px
 }
 
-ul li.edit-mode label {
+#incomplete-tasks .edit-mode label,
+#completed-tasks .edit-mode label {
 	display:none;
 }
