--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 .body {
 	background-color: #f8f8f8;
 	color: #333;
-	font-family: Lato, sans-serif;
+	font-family: "Lato", sans-serif;
 }
 
 .promo {
@@ -18,7 +18,7 @@
 }
 
 .promo .more-info {
-	font-family: fantasy, cursive;
+	font-family: "fantasy", cursive;
 }
 
 @media (max-width:768px) {
